--- a/lab5/hadoop-hive-dockercompose/docker-compose.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose.yaml
@@ -105,7 +105,8 @@ services:
       - hadoop
 
   hive-metastore:
-    image: bde2020/hive-metastore:2.3.2 # <-- This is the correct image
+    image: bde2020/hive:2.3.2-postgresql-metastore
+    # <-- This is the correct image
     container_name: hive-metastore
     restart: always
     depends_on:
