--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -1,79 +1,158 @@
-version: '3.8'
+# docker-compose.yml
+version: "3.8"
 
 services:
-  #########################################
-  # 1. Hive Metastore Database (PostgreSQL)
-  #########################################
-  postgres-metastore:
-    image: postgres:16
-    container_name: postgres-metastore
+  namenode:
+    image: bde2020/hadoop-namenode:2.0.0-hadoop3.2.1-java8
+    container_name: namenode
+    restart: always
+    ports:
+      - "9870:9870" # NameNode Web UI
+      - "9000:9000" # FS Default
+    volumes:
+      - hadoop_namenode:/hadoop/dfs/name
+      - /home/iitgcpuser/iit/lab3_4_map_reduce/mapreduce-design-patterns/src/main/resources:/opt/hadoop/resources
+    environment:
+      - CLUSTER_NAME=test
+    env_file:
+      - ./hadoop.env
+    networks:
+      - hadoop
+
+  datanode1:
+    image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
+    container_name: datanode1
+    restart: always
+    depends_on:
+      - namenode
+    volumes:
+      - hadoop_datanode1:/hadoop/dfs/data
+    environment:
+      SERVICE_PRECONDITION: "namenode:9870"
+    env_file:
+      - ./hadoop.env
+    networks:
+      - hadoop
+
+  datanode2:
+    image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
+    container_name: datanode2
+    restart: always
+    depends_on:
+      - namenode
+    volumes:
+      - hadoop_datanode2:/hadoop/dfs/data
+    environment:
+      SERVICE_PRECONDITION: "namenode:9870"
+    env_file:
+      - ./hadoop.env
+    networks:
+      - hadoop
+
+  resourcemanager:
+    image: bde2020/hadoop-resourcemanager:2.0.0-hadoop3.2.1-java8
+    container_name: resourcemanager
+    restart: always
+    depends_on:
+      - namenode
+      - datanode1
+      - datanode2
+    ports:
+      - "8088:8088" # ResourceManager Web UI
+    environment:
+      SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode1:9864 datanode2:9864"
+    env_file:
+      - ./hadoop.env
+    networks:
+      - hadoop
+
+  nodemanager1:
+    image: bde2020/hadoop-nodemanager:2.0.0-hadoop3.2.1-java8
+    container_name: nodemanager1
+    restart: always
+    depends_on:
+      - resourcemanager
+    environment:
+      SERVICE_PRECONDITION: "resourcemanager:8088"
+    env_file:
+      - ./hadoop.env
+    networks:
+      - hadoop
+
+  nodemanager2:
+    image: bde2020/hadoop-nodemanager:2.0.0-hadoop3.2.1-java8
+    container_name: nodemanager2
+    restart: always
+    depends_on:
+      - resourcemanager
+    environment:
+      SERVICE_PRECONDITION: "resourcemanager:8088"
+    env_file:
+      - ./hadoop.env
+    networks:
+      - hadoop
+  hive-postgres:
+    image: postgres:9.6
+    container_name: hive-postgres
+    restart: always
+    volumes:
+      - hive_postgres_data:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=hive
       - POSTGRES_PASSWORD=hive
       - POSTGRES_DB=metastore
-    ports:
-      - "5432:5432"
-    volumes:
-      - metastore-db-data:/var/lib/postgresql/data
     networks:
-      - hadoop-hive-net
-
-  #########################################
-  # 2. Hadoop Cluster (Bitnami Image)
-  #########################################
-  hadoop:
-    image: bitnami/hadoop:3.3.6
-    container_name: hadoop
-    environment:
-      - HADOOP_DEFAULTS_HDFS_ENABLE=true
-      - HADOOP_DEFAULTS_YARN_ENABLE=true
-      - HADOOP_HDFS_FORMAT=true
-    ports:
-      - "9870:9870"  # NameNode Web UI
-      - "8088:8088"  # YARN Web UI
-    volumes:
-      - hadoop-data:/opt/bitnami/hadoop/data
-    networks:
-      - hadoop-hive-net
-
-  #########################################
-  # 3. Hive Services (Bitnami Images)
-  #########################################
-  hive-metastore:
-    image: bitnami/hive:3.1.3
-    container_name: hive-metastore
-    depends_on:
-      - postgres-metastore
       - hadoop
-    environment:
-      - HIVE_ROLE=metastore
-      - HIVE_METASTORE_DATABASE_HOST=postgres-metastore
-      - HIVE_METASTORE_DATABASE_NAME=metastore
-      - HIVE_METASTORE_DATABASE_USER=hive
-      - HIVE_METASTORE_DATABASE_PASSWORD=hive
-      - HADOOP_HOST=hadoop
-    networks:
-      - hadoop-hive-net
 
-  hive--server:
-    image: bitnami/hive:3.1.3
+  hive-metastore:
+    image: bde2020/hive-metastore-postgresql:2.3.0
+    # <-- This is the correct image
+    container_name: hive-metastore
+    restart: always
+    depends_on:
+      - hive-postgres
+      - namenode
+      - datanode1
+      - datanode2
+    ports:
+      - "9083:9083" # Metastore Thrift port
+    environment:
+      SERVICE_PRECONDITION: "hive-postgres:5432 namenode:9000 namenode:9870"
+      # These credentials are for this service to run schematool
+      HIVE_CONF_javax_jdo_option_ConnectionURL: "jdbc:postgresql://hive-postgres:5432/metastore"
+      HIVE_CONF_javax_jdo_option_ConnectionDriverName: "org.postgresql.Driver"
+      HIVE_CONF_javax_jdo_option_ConnectionUserName: "hive"
+      HIVE_CONF_javax_jdo_option_ConnectionPassword: "hive"
+    env_file:
+      - ./hadoop.env
+    networks:
+      - hadoop
+
+  hive-server:
+    image: bde2020/hive:2.3.2
     container_name: hive-server
+    restart: always
     depends_on:
       - hive-metastore
-      - hadoop
-    environment:
-      - HIVE_ROLE=hiveserver2
-      - HIVE_METASTORE_URIS=thrift://hive-metastore:9083
-      - HADOOP_HOST=hadoop
+      - resourcemanager
     ports:
-      - "10000:10000" # HiveServer2 Thrift port
+      - "10000:10000" # HiveServer2 Thrift port (for Beeline/JDBC)
       - "10002:10002" # HiveServer2 Web UI
+    environment:
+      # This service waits for the metastore, which is now starting correctly
+      SERVICE_PRECONDITION: "hive-metastore:9083"
+      HIVE_CONF_hive_metastore_uris: "thrift://hive-metastore:9083"
+      # NO database credentials here. This breaks the race condition.
+    env_file:
+      - ./hadoop.env
     networks:
-      - hadoop-hive-net
+      - hadoop
 
 volumes:
-  metastore-db-data:
-  hadoop-data:
+  hadoop_namenode:
+  hadoop_datanode1:
+  hadoop_datanode2:
+  hive_postgres_data: # <-- Add this line
 
 networks:
-  hadoop-hive-net:
+  hadoop:
