--- a/lab5/hadoop-hive-dockercompose/docker-compose.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose.yaml
@@ -105,15 +105,13 @@ services:
       - hadoop
 
   hive-metastore:
-    image: bde2020/hive-metastore-postgresql:2.3.0
-    # <-- This is the correct image
+    # 1. FIXED: Use an image built for Hadoop 3.2.1
+    image: vengleab/docker-hive:hive-hadoop-3.2.1-amd-only
     container_name: hive-metastore
     restart: always
     depends_on:
       - hive-postgres
       - namenode
-      - datanode1
-      - datanode2
     ports:
       - "9083:9083" # Metastore Thrift port
     environment:
@@ -127,17 +125,19 @@ services:
       - ./hadoop.env
     networks:
       - hadoop
+    # 2. FIXED: This command forces this container to run the *metastore* service
     command: /opt/hive/bin/hive --service metastore
 
   hive-server:
-    image: bde2020/hive:2.3.2
+    # 1. FIXED: Use the *same* Hadoop 3.2.1 compatible image
+    image: vengleab/docker-hive:hive-hadoop-3.2.1-amd-only
     container_name: hive-server
     restart: always
     depends_on:
       - hive-metastore
       - resourcemanager
     ports:
-      - "10000:10000" # HiveServer2 Thrift port (for Beeline/JDBC)
+      - "10000:10000" # HiveServer2 Thrift port
       - "10002:10002" # HiveServer2 Web UI
     environment:
       # This service waits for the metastore, which is now starting correctly
