--- a/lab5/hadoop-hive-dockercompose/hadoop-hive.env
+++ b/lab5/hadoop-hive-dockercompose/hadoop-hive.env
@@ -7,6 +7,13 @@ HIVE_SITE_CONF_hive_metastore_uris=thrift://hive-metastore:9083
 HIVE_METASTORE_URI=thrift://hive-metastore:9083
 
 
+HADOOP_USER_NAME=hdfs
+
+# Hive Metastore PostgreSQL
+POSTGRES_DB=metastore
+POSTGRES_USER=hive
+POSTGRES_PASSWORD=hive
+
 CORE_CONF_fs_defaultFS=hdfs://namenode:8020
 CORE_CONF_hadoop_http_staticuser_user=root
 CORE_CONF_hadoop_proxyuser_hue_hosts=*
