--- a/lab5/hadoop-hive-dockercompose/hadoop-hive.env
+++ b/lab5/hadoop-hive-dockercompose/hadoop-hive.env
@@ -55,4 +55,36 @@ YARN_CONF_yarn_nodemanager_remote___app___log___dir=/app-logs
 YARN_CONF_yarn_log_server_url=http://historyserver:8188/applicationhistory/logs/
 YARN_CONF_yarn_timeline___service_enabled=true
 YARN_CONF_yarn_timeline___service_generic___application___history_enabled=true
-YARN_CONF_yarn_resourc
+YARN_CONF_yarn_resourcemanager_system___metrics___publisher_enabled=true
+
+# --- YARN NodeManager Settings (from your YARN-SITE.XML) ---
+YARN_CONF_yarn_nodemanager_pmem___check___enabled=false
+YARN_CONF_yarn_nodemanager_vmem___check___enabled=false
+YARN_CONF_yarn_nodemanager_delete_debug___delay___sec=600
+YARN_CONF_yarn_nodemanager_aux___services=mapreduce_shuffle
+
+# =================================================================
+# MapReduce Configuration (for mapred-site.xml)
+# =================================================================
+MAPRED_CONF_mapreduce_framework_name=yarn
+MAPRED_CONF_yarn_app_mapreduce_am_env=HADOOP_MAPRED_HOME=$HADOOP_HOME
+MAPRED_CONF_mapreduce_map_env=HADOOP_MAPRED_HOME=$HADOOP_HOME
+MAPRED_CONF_mapreduce_reduce_env=HADOOP_MAPRED_HOME=$HADOOP_HOME
+
+# =================================================================
+# Capacity Scheduler Configuration (for capacity-scheduler.xml)
+# These are loaded as YARN properties
+# =================================================================
+YARN_CONF_yarn_scheduler_capacity_maximum___applications=10000
+YARN_CONF_yarn_scheduler_capacity_maximum___am___resource___percent=0.1
+YARN_CONF_yarn_scheduler_capacity_resource___calculator=org.apache.hadoop.yarn.util.resource.DefaultResourceCalculator
+YARN_CONF_yarn_scheduler_capacity_root_queues=default
+YARN_CONF_yarn_scheduler_capacity_root_default_capacity=100
+YARN_CONF_yarn_scheduler_capacity_root_default_user___limit___factor=1
+YARN_CONF_yarn_scheduler_capacity_root_default_maximum___capacity=100
+YARN_CONF_yarn_scheduler_capacity_root_default_state=RUNNING
+YARN_CONF_yarn_scheduler_capacity_root_default_acl_submit_applications=*
+YARN_CONF_yarn_scheduler_capacity_root_default_acl_administer_queue=*
+YARN_CONF_yarn_scheduler_capacity_node___locality___delay=40
+YARN_CONF_yarn_scheduler_capacity_queue___mappings=
+YARN_CONF_yarn_scheduler_capacity_queue___mappings___override_enable=false
