--- a/lab5/hadoop-hive-dockercompose/docker-compose.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose.yaml
@@ -25,14 +25,13 @@ services:
     ports:
       - 50075:50075
   hive-server:
-    image: bde2020/hive:2.1.0-postgresql-metastore
+    image: bde2020/hive:2.3.2-hadoop2.8-postgresql-metastore  # <-- CORRECTED IMAGE
     platform: linux/amd64
     volumes:
       - /home/iitgcpuser/iit/lab5/hadoop-hive-dockercompose/recharge.input:/opt/recharge.input
     container_name: hive-server
     env_file:
       - ./hadoop-hive.env
-    # --- REMOVE THE 'environment' BLOCK FROM HERE ---
     ports:
       - "10000:10000"
     depends_on:
@@ -40,13 +39,12 @@ services:
       - namenode
       - datanode
   hive-metastore:
-    image: bde2020/hive:2.1.0-postgresql-metastore
+    image: bde2020/hive:2.3.2-hadoop2.8-postgresql-metastore  # <-- CORRECTED IMAGE
     platform: linux/amd64
     container_name: hive-metastore
     env_file:
       - ./hadoop-hive.env
     command: /opt/hive/bin/hive --service metastore
-    # --- REMOVE THE 'environment' BLOCK FROM HERE ---
     depends_on:
       - hive-metastore-postgresql
   hive-metastore-postgresql:
