--- a/lab5/hadoop-hive-dockercompose/hadoop-hive.env
+++ b/lab5/hadoop-hive-dockercompose/hadoop-hive.env
@@ -1,6 +1,5 @@
 # =================================================================
 # Hive Metastore (PostgreSQL Database)
-# These variables are for the postgresql container
 # =================================================================
 POSTGRES_DB=metastore
 POSTGRES_USER=hive
@@ -8,7 +7,6 @@ POSTGRES_PASSWORD=hive
 
 # =================================================================
 # Hive Service Configuration
-# These variables are for the hive-server and hive-metastore
 # =================================================================
 HIVE_SITE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore-postgresql/metastore
 HIVE_SITE_CONF_javax_jdo_option_ConnectionDriverName=org.postgresql.Driver
@@ -21,8 +19,8 @@ HIVE_METASTORE_URI=thrift://hive-metastore:9083
 # =================================================================
 # Hadoop General Configuration
 # =================================================================
-# This is the variable that solves your error:
-HADOOP_HOME=/opt/hadoop
+# This is the variable that solves your error, corrected for Hadoop 2.8.x images
+HADOOP_HOME=/opt/hadoop-2.8.5
 
 HADOOP_USER_NAME=hdfs
 
@@ -52,12 +50,11 @@ YARN_CONF_yarn_resourcemanager_recovery_enabled=true
 YARN_CONF_yarn_resourcemanager_store_class=org.apache.hadoop.yarn.server.resourcemanager.recovery.FileSystemRMStateStore
 YARN_CONF_yarn_resourcemanager_fs_state___store_uri=/rmstate
 YARN_CONF_yarn_nodemanager_remote___app___log___dir=/app-logs
+YRequest_ID: 0dfb143e4904a6258ed69542a20b127e
 YARN_CONF_yarn_log_server_url=http://historyserver:8188/applicationhistory/logs/
 YARN_CONF_yarn_timeline___service_enabled=true
 YARN_CONF_yarn_timeline___service_generic___application___history_enabled=true
 YARN_CONF_yarn_resourcemanager_system___metrics___publisher_enabled=true
-
-# --- YARN NodeManager Settings (from your YARN-SITE.XML) ---
 YARN_CONF_yarn_nodemanager_pmem___check___enabled=false
 YARN_CONF_yarn_nodemanager_vmem___check___enabled=false
 YARN_CONF_yarn_nodemanager_delete_debug___delay___sec=600
@@ -73,7 +70,6 @@ MAPRED_CONF_mapreduce_reduce_env=HADOOP_MAPRED_HOME=$HADOOP_HOME
 
 # =================================================================
 # Capacity Scheduler Configuration (for capacity-scheduler.xml)
-# These are loaded as YARN properties
 # =================================================================
 YARN_CONF_yarn_scheduler_capacity_maximum___applications=10000
 YARN_CONF_yarn_scheduler_capacity_maximum___am___resource___percent=0.1
@@ -85,6 +81,7 @@ YARN_CONF_yarn_scheduler_capacity_root_default_maximum___capacity=100
 YARN_CONF_yarn_scheduler_capacity_root_default_state=RUNNING
 YARN_CONF_yarn_scheduler_capacity_root_default_acl_submit_applications=*
 YARN_CONF_yarn_scheduler_capacity_root_default_acl_administer_queue=*
+YPlayer_ID: 15332f7e77b4d1b11b51e06497f1f6d9
 YARN_CONF_yarn_scheduler_capacity_node___locality___delay=40
 YARN_CONF_yarn_scheduler_capacity_queue___mappings=
 YARN_CONF_yarn_scheduler_capacity_queue___mappings___override_enable=false
