--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -12,27 +12,13 @@ services:
       - CLUSTER_NAME=hadoop-cluster
     volumes:
       - namenode-data:/hadoop/dfs/name
+      - ./namenode-entrypoint.sh:/namenode-entrypoint.sh
     ports:
-      - "9870:9870"   # Web UI
-      - "9000:9000"   # HDFS
+      - "9870:9870"
+      - "9000:9000"
     env_file:
       - ./hadoop.env
-    entrypoint: >
-      bash -c "
-        echo 'Checking NameNode metadata...';
-        if [ -f /hadoop/dfs/name/current/VERSION ]; then
-          echo 'Existing HDFS metadata found. Checking version...';
-          grep -q 'layoutVersion=-65' /hadoop/dfs/name/current/VERSION || {
-            echo 'Old layout version found! Reformatting NameNode...';
-            rm -rf /hadoop/dfs/name/*;
-            hdfs namenode -format -nonInteractive -force -clusterId CID-$(date +%s);
-          }
-        else
-          echo 'No existing NameNode data found. Formatting fresh NameNode...';
-          hdfs namenode -format -nonInteractive -force -clusterId CID-$(date +%s);
-        fi;
-        /entrypoint.sh
-      "
+    entrypoint: ["/namenode-entrypoint.sh"]
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9870"]
       interval: 10s
@@ -56,6 +42,8 @@ services:
       - "9864:9864"
     env_file:
       - ./hadoop.env
+    depends_on:
+      - namenode
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9864"]
       interval: 10s
@@ -94,9 +82,12 @@ services:
       - HIVE_METASTORE_DB_NAME=metastore
       - HIVE_METASTORE_DB_USER=hive
       - HIVE_METASTORE_DB_PASS=hive
-      - SERVICE_PRECONDITION=namenode:9870 datanode:9864 hive-metastore-postgresql:5432
     ports:
       - "9083:9083"
+    depends_on:
+      - namenode
+      - datanode
+      - hive-metastore-postgresql
     networks:
       - hadoop-net
 
@@ -112,10 +103,13 @@ services:
       - HIVE_CORE_CONF_javax_jdo_option_ConnectionDriverName=org.postgresql.Driver
       - HIVE_CORE_CONF_javax_jdo_option_ConnectionUserName=hive
       - HIVE_CORE_CONF_javax_jdo_option_ConnectionPassword=hive
-      - SERVICE_PRECONDITION=namenode:9870 datanode:9864 hive-metastore:9083
     ports:
-      - "10000:10000"  # JDBC
-      - "10002:10002"  # Web UI
+      - "10000:10000"
+      - "10002:10002"
+    depends_on:
+      - namenode
+      - datanode
+      - hive-metastore
     networks:
       - hadoop-net
 
