--- a/lab5/hadoop-hive-dockercompose/hadoop.env
+++ b/lab5/hadoop-hive-dockercompose/hadoop.env
@@ -1,2 +1,4 @@
-CORE_CONF_fs_defaultFS=hdfs://namenode:9000
 HDFS_CONF_dfs_replication=1
+CORE_CONF_fs_defaultFS=hdfs://namenode:8020
+HDFS_CONF_dfs_namenode_name_dir=file:///hadoop/dfs/name
+HDFS_CONF_dfs_datanode_data_dir=file:///hadoop/dfs/data
