--- a/lab5/hadoop-hive-dockercompose/hadoop.env
+++ b/lab5/hadoop-hive-dockercompose/hadoop.env
@@ -1,4 +1,12 @@
-HDFS_CONF_dfs_replication=1
+# HDFS settings
+CLUSTER_NAME=test
 CORE_CONF_fs_defaultFS=hdfs://namenode:8020
 HDFS_CONF_dfs_namenode_name_dir=file:///hadoop/dfs/name
 HDFS_CONF_dfs_datanode_data_dir=file:///hadoop/dfs/data
+HDFS_CONF_dfs_replication=1
+
+# Hive settings
+HIVE_CONF_hive_metastore_uris=thrift://hive-metastore:9083
+
+# Spark settings
+SPARK_MASTER=spark://spark-master:7077
