--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -98,18 +98,19 @@ services:
     volumes:
       - ./hadoop_dir:/opt/hadoop-3.2.1/etc/hadoop
       - ./wait-for-it.sh:/wait-for-it.sh:ro
-    entrypoint: [ "/wait-for-it.sh", "hive-metastore-postgresql", "5432", "--", "/opt/hive/bin/hive", "-f", "/opt/hive/scripts/metastore/hive-schema-2.3.2.postgres.sql" ]
+    entrypoint: [ "/wait-for-it.sh", "hive-metastore-postgresql", "5432", "--", "/opt/hive/bin/hive", "--service", "metastore" ]
     depends_on:
       namenode:
         condition: service_healthy
       datanode:
         condition: service_healthy
       hive-metastore-postgresql:
-        condition: service_started
+        condition: service_healthy
     ports:
       - "9083:9083"
     networks:
       - hadoop-net
+
 
   # -----------------------------
   # HiveServer2
